@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.8) unstable; urgency=low
 
   * istream: added method as_fd() to convert istream to file descriptor
   * fork: support passing stdin istream fd to child process
+  * http-cache: discard only matching entries on POST
 
  --
 
